Refactor api server route handlers
